# jwst-pixelcorrection

./: 01stage1_pipeline.ipynb  03module_testing.ipynb  04module.ipynb  README.md
deadpixl/: __init__.py  absolute_change.py  classify_dead_pixels.py  copy__init__.py  find_closed_shape_contour.py  find_dead_pixels.py  interpolate_dead_pixels.py  split_into_segments.py
notebook_examples/: data_slice.txt  example_usage.ipynb  file_retrieval.ipynb  interpolation_testing.ipynb  pixel_identification.ipynb  stage1_pipeline.ipynb
unrelpix/: pyproject.toml
unrelpix/unrelpix/: __init__.py  classification.py  identification.py  interpolation.py  rampfitting.py
unrelpix/unrelpix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
