[build-system]
requires = [
    "setuptools", 
    "wheel",
    "numpy>=2.2.1",
    "scipy>=1.15.3",
    "scikit-learn>=1.6.1",
    "joblib>=1.5.1",
    "astropy>=7.0.1"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "unrelpix"
version = "0.0.3"
description = "Pixel identification, classification, and interpolation in NIRSpec images"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Fran Stimac"}
]
dependencies = [
    "numpy>=2.2.1",
    "scipy>=1.15.3",
    "scikit-learn>=1.6.1",
    "joblib>=1.5.1",
    "astropy>=7.0.1"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]

[tool.setuptools.packages.find]
where = ["."]